<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    	<TextView android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:text="@string/search_act_header"
	    android:layout_marginTop="10sp"
	    android:layout_marginLeft="10sp"
	    android:layout_marginStart="10sp"
	    android:textSize="27sp"
	    android:id="@+id/zillow_act_head_text"
	    android:textColor="#FFF"
	    />
	<TextView android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/address_form_label"
	    android:textColor="#FFF"
	    android:layout_marginTop="17sp"
	    android:layout_marginStart="10sp"
	    android:layout_marginLeft="10sp"
	    android:textSize="16sp"
	    android:id="@+id/form_label_text"/>
	<EditText android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/rounded_box_states"
	    android:paddingTop="5sp"
	    android:paddingBottom="5sp"
	    android:paddingLeft="5sp"
	    android:paddingRight="5sp"
	    android:layout_marginTop="5sp"
	    android:layout_marginLeft="10sp"
	    android:layout_marginRight="10sp"
	    android:inputType="textPostalAddress"
	    android:id="@+id/edittext"
	    android:hint="@string/address_field_hint"
	    />
	<TextView android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text=""
	    android:textColor="#F00"
	    android:layout_marginStart="10sp"
	    android:layout_marginLeft="10sp"
	    android:textSize="16sp"
	    android:textStyle="bold"
	    android:id="@+id/form_label_error"/>
	
    <TextView android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/city_form_label"
	    android:textColor="#FFF"
	    android:layout_marginTop="5sp"
	    android:layout_marginStart="10sp"
	    android:layout_marginLeft="10sp"
	    android:textSize="16sp"
	    android:id="@+id/city_label_text"/>
	<EditText android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5sp"
	    android:layout_marginLeft="10sp"
	    android:layout_marginRight="10sp"
	    android:inputType="textPostalAddress"
	    android:id="@+id/citytext"
	    android:background="@drawable/rounded_box_states"
	    android:paddingTop="5sp"
	    android:paddingBottom="5sp"
	    android:paddingLeft="5sp"
	    android:paddingRight="5sp"
	    android:hint="@string/city_field_hint"
	    />
	<TextView android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text=""
	    android:textColor="#F00"
	    android:textStyle="bold"
	    android:layout_marginStart="10sp"
	    android:layout_marginLeft="10sp"
	    android:textSize="16sp"
	    android:id="@+id/city_label_error"/>
	<TextView android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/state_form_label"
	    android:textColor="#FFF"
	    android:layout_marginTop="5sp"
	    android:layout_marginStart="10sp"
	    android:layout_marginLeft="10sp"
	    android:textSize="16sp"
	    android:id="@+id/state_label_text"/>
	<Spinner android:id="@+id/state_spinner"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:entries="@array/state_entries" 
	     android:background="@drawable/rounded_box_states"
	     android:layout_marginTop="5sp"
	     android:layout_marginLeft="10sp"
	     android:layout_marginRight="10sp"
	     android:paddingTop="5sp"
	    android:paddingBottom="5sp"
	    android:paddingLeft="5sp"
	    android:paddingRight="5sp"
	    />
	<TextView android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text=""
	    android:textColor="#F00"
	    android:layout_marginStart="10sp"
	    android:layout_marginLeft="10sp"
	    android:textSize="16sp"
	    android:id="@+id/state_error_label"
	    android:textStyle="bold"
    />
	<LinearLayout android:orientation="horizontal" 
	    android:baselineAligned="false"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5sp"
	    android:layout_marginLeft="10sp"
	    android:layout_marginStart="10sp"
	    android:layout_marginRight="10sp"
	    android:layout_marginEnd="10sp"
	    android:gravity="center_vertical">
	    <LinearLayout android:orientation="horizontal"
	        android:gravity="start"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_weight="1">
	    <Button 
	        android:gravity="center"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:padding="5dp"
	        android:background="#c0c0c0"
	        android:text="@string/search_button_text"
	        android:textAllCaps="false"
	        android:id="@+id/zillow_search_button"
	        />
	    </LinearLayout>
	    <LinearLayout android:orientation="horizontal"
	        android:gravity="end"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_weight="1">
	    <ImageView android:src="@drawable/zillow"
	       	android:layout_width="wrap_content"
	        android:contentDescription="@string/zillow_image_des"
	        android:layout_height="40dp"
	        />
	    </LinearLayout>
	</LinearLayout>
		<View android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="#c0c0c0"
	    android:layout_margin="10sp"
	    android:layout_marginTop="3sp"
	    android:layout_marginBottom="3sp"
	    />
	
	<TextView android:layout_width="match_parent"
	    android:textSize="20sp"
	    android:textStyle="bold"
	    android:gravity="center_horizontal"
	    android:layout_height="wrap_content"
	    android:text="@string/empty_string"
	    android:layout_marginLeft="10sp"
	    android:layout_marginStart="10sp"
	    android:layout_marginRight="10sp"
	    android:layout_marginEnd="10sp"
	    android:layout_weight="1"
	    android:textColor="#FFF"
	    android:id="@+id/no_match_error"/>
</LinearLayout>
</ScrollView>
</RelativeLayout>