<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.usc.beeram.realestatesearch.ZillowResultsBasicFragment" 
    android:background="#FFF"
    >
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp">
	<TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:text="@string/more_on_zillow"
	        android:textSize="@dimen/abc_text_size_menu_material"
	        android:layout_weight="1"/>
	<ImageButton android:src="@drawable/fshare"
	    android:id="@+id/fshare_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:padding="0dp"
	    />
	</LinearLayout>
	<View android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="#c0c0c0"
	    android:layout_marginTop="2dp"
	    />
    <ListView 
        android:id="@+id/basic_result_listview"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        />
	<LinearLayout android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/zillow_footer_1" />

	    <TextView
	        android:id="@+id/zillow_terms_link"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/zillow_footer_2" />
	    <TextView
	        android:id="@+id/zillow_zestimate_link"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/zillow_footer_3" />
	</LinearLayout>
    
</LinearLayout>
