<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.usc.beeram.realestatesearch.ZillowResultsZestimateFragment" >
	<TextSwitcher
	    android:id="@+id/zestimate_text_switcher"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    />
	<TextView 
	    android:id="@+id/zestimate_address_text"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    />
	<ImageSwitcher 
	    android:id="@+id/zestimate_image_switcher"
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    android:layout_marginTop="@dimen/activity_vertical_margin"
	    android:layout_gravity="center"
	    android:layout_weight="1"/>
	<LinearLayout android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:baselineAligned="false"
	    android:layout_marginTop="@dimen/activity_vertical_margin"
	    >
	    <LinearLayout android:orientation="horizontal"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:layout_weight="1">
	    <Button android:id="@+id/zestimate_previous_button"
	        android:background="#c0c0c0"
	        android:text="@string/previous_button_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAllCaps="false"
	        android:paddingTop="7sp"
	        android:paddingBottom="7sp"
	        android:paddingLeft="10sp"
	        android:paddingRight="10sp"
	        android:layout_gravity="center"
	        />
	    </LinearLayout>
	    <LinearLayout android:orientation="horizontal"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:layout_weight="1">
	    <Button android:id="@+id/zestimate_next_button"
	        android:background="#c0c0c0"
	        android:text="@string/next_button_text"
	        android:textAllCaps="false"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="7sp"
	        android:paddingBottom="7sp"
	        android:paddingLeft="10sp"
	        android:paddingRight="10sp"
	        android:layout_gravity="center"
	        />
	    </LinearLayout>
	    </LinearLayout>    
	<LinearLayout android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_marginTop="@dimen/activity_vertical_margin">

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/zillow_footer_1" />

	    <TextView
	        android:id="@+id/zillow_terms_link"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/zillow_footer_2" />
	    <TextView
	        android:id="@+id/zillow_zestimate_link"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/zillow_footer_3" />
	</LinearLayout>
</LinearLayout>
